# SheikhBot

./: QUICKSTART.md  README.md  VERCEL_DEPLOYMENT.md  central.py  config.yml  default_config.yml  export_1743067155.json  export_1743076744.json  index.html  index.json  information.md  main.py  manifest.json  pyproject.toml  requirements.txt  search_index.json  setup.py  vercel.json
.github/workflows/: crawl.yml  crawler.yml  domain_processor.yml
crawl_results/: desktop_1743076742.json  images_1743067155.json  mobile_1743067135.json  mobile_1743076744.json  stats_1743067001.json  stats_1743076744.json
data/crawl_results/: desktop_1743066994.json  desktop_1743067128.json  mobile_1743066998.json  stats_1743067155.json
docs/: search_index.json
docs/templates/: index.html  search.html
examples/: indexnow_example.py
public/: index.html
scripts/domain_processor/: analyze_domains.py  create_dataset.py  fetch_domains.py  train_model.py
scripts/github_actions/: build_index.py  index_template.html  modify_config.py  run_crawler.py
src/: __init__.py
src/cli/: commands.py
src/crawlers/: __init__.py  base_crawler.py  desktop_crawler.py  image_crawler.py  mobile_crawler.py  sheikhbot.py
src/parsers/: __init__.py
src/storage/: __init__.py  file_storage.py  index_builder.py  mongodb_storage.py
src/utils/: __init__.py  config.py  http.py  indexnow.py  logger.py  robots.py  sitemap.py  url.py  user_agents.py
src/web/: api.py
templates/: search.html
